(added) OC-52 #comment git testing file #time 20m

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -4,6 +4,8 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+src/main/resources/templates/**
+src/main/resources/invoker/**
 src/main/resources/application.yml
 src/main/resources/upload-dir
 
