--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -44,6 +44,11 @@ spring:
     job-store-type: jdbc
 
 management:
+  health:
+    status:
+      http-mapping:
+        DOWN: 200
+        UP: 200
   endpoint:
     health:
       show-details: always
