--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -51,11 +51,7 @@ management:
         UP: 200
   endpoint:
     health:
-      show-details: always
-      status:
-        http-mapping:
-          fatal: 200
-
+      show-details: alwaysx
 
 #timezone: Europe/Berlin
 
