[Modified] OC-52 #comment fixed bug when uploading image for user and user_group #time 4h 50m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -51,14 +51,12 @@ management:
         UP: 200
   endpoint:
     health:
-      show-details: alwaysx
+      show-details: always
 
-#timezone: Europe/Berlin
-
-#elasticsearch:
-#  clustername: open_celium
-#  host: localhost
-#  port: 9300
+elasticsearch:
+  clustername: open_celium
+  host: localhost
+  port: 9300
 
 #  ldap:
 #    embedded:
