--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -139,10 +139,12 @@
     "react-css-modules": "^3.7.10",
     "react-hot-loader": "^4.7.1",
     "react-style-proptype": "^2.0.1",
+    "react-test-renderer": "^16.13.1",
     "redux-devtools": "^3.5.0",
     "redux-devtools-chart-monitor": "1.4.2",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^2.6.1",
+    "redux-mock-store": "^1.5.4",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
