--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -43,6 +43,9 @@ spring:
             tablePrefix: QRTZ_
     job-store-type: jdbc
 
+  liquibase:
+    change-log: classpath:/db/changelog/changelog-master.xml
+
 management:
   health:
     status:
