--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.7",
     "react-select": "^2.4.1",
+    "react-slick": "^0.26.1",
     "react-svg": "^8.0.2",
     "react-toolbox": "^2.0.0-beta.12",
     "reactour": "^1.13.4",
@@ -163,7 +164,6 @@
     "build_dev": "cross-env NODE_ENV=development webpack --mode development",
     "build_prod": "cross-env NODE_ENV=production webpack --mode production",
     "start_prod_server": "node prod_server.js",
-
     "start_mock": "node json-server.js",
     "watch:test": "node_modules/.bin/jest --watch --no-watchman",
     "test": "node_modules/.bin/jest"
