--- a/test/pom.xml
+++ b/test/pom.xml
@@ -65,6 +65,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>net.lightbody.bmp</groupId>
+            <artifactId>browsermob-core</artifactId>
+            <version>2.1.5</version>
+        </dependency>
 
     </dependencies>
 
