--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -1,4 +1,13 @@
 {
+  "env": {
+    "test": {
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "plugins": [
+        ["@babel/plugin-proposal-decorators", {"legacy": true}],
+        "@babel/plugin-proposal-class-properties"
+      ]
+    }
+  },
   "presets": [
     ["@babel/preset-env", {
       "loose": true,
