[Modified] OC-264 #comment created convertion and valudation. tested #time 30h

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -170,7 +170,8 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(css|scss)$": "identity-obj-proxy"
+      "^@classes(.*)$": "<rootDir>/app/classes$1",
+      "^@utils(.*)$": "<rootDir>/app/utils$1"
     },
     "setupFiles": [
       "raf/polyfill"
