[Fixing] OC-264 #comment fixing issues with converting body #time 5h

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -171,6 +171,7 @@
   "jest": {
     "moduleNameMapper": {
       "^@classes(.*)$": "<rootDir>/app/classes$1",
+      "^@change_component(.*)$": "<rootDir>app/components/general/change_component$1",
       "^@utils(.*)$": "<rootDir>/app/utils$1"
     },
     "setupFiles": [
