--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -159,7 +159,7 @@
     "webpack-stream": "5.2.1"
   },
   "scripts": {
-    "start_dev": "cross-env NODE_ENV=development NODE_HMR=true NODE_SOCKET=true NODE_BSYNC=true node dev_server.js --mode development",
+    "start_dev": "cross-env NODE_ENV=development NODE_HMR=true NODE_SOCKET=false NODE_BSYNC=true node dev_server.js --mode development",
     "start_dev_bsync": "cross-env NODE_ENV=development NODE_HMR=true NODE_SOCKET=true NODE_BSYNC=true node dev_server.js --mode development",
     "start_prod": "cross-env NODE_ENV=production NODE_SOCKET=true node dev_server.js --mode production",
     "build_dev": "cross-env NODE_ENV=development webpack --mode development",
