--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.3.1",
     "chroma-js": "^2.0.2",
     "clean-webpack-plugin": "^3.0.0",
+    "cron-parser": "^2.18.0",
     "eslint-loader": "^4.0.2",
     "express": "^4.17.1",
     "fine-uploader": "^5.14.5",
