[Fixed] OC-290 #comment removed hot reload module and its integration #time 2h

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -30,11 +30,11 @@
     "postcss-cssnext": "^2.9.0",
     "prop-types": "^15.7.2",
     "raf": "^3.4.0",
-    "react": "^16.8.2",
+    "react": "16.8.2",
     "react-ace": "^6.4.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-contenteditable": "^3.3.2",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react-dom": "16.14.0",
     "react-favicon": "^0.0.18",
     "react-grid-system": "^4.4.2",
     "react-i18next": "v10.0.0",
@@ -160,8 +160,8 @@
     "webpack-stream": "5.2.1"
   },
   "scripts": {
-    "start_dev": "cross-env NODE_ENV=development NODE_HMR=true NODE_SOCKET=false NODE_BSYNC=true node dev_server.js --mode development",
-    "start_dev_bsync": "cross-env NODE_ENV=development NODE_HMR=true NODE_SOCKET=true NODE_BSYNC=true node dev_server.js --mode development",
+    "start_dev": "cross-env NODE_ENV=development NODE_SOCKET=false NODE_BSYNC=true node dev_server.js --mode development",
+    "start_dev_bsync": "cross-env NODE_ENV=development NODE_SOCKET=true NODE_BSYNC=true node dev_server.js --mode development",
     "start_prod": "cross-env NODE_ENV=production NODE_SOCKET=true node dev_server.js --mode production",
     "build_dev": "cross-env NODE_ENV=development webpack --mode development",
     "build_prod": "cross-env NODE_ENV=production webpack --mode production",
