--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -88,6 +88,10 @@ opencelium:
   version: 1.3
   mail:
     from: OC_Application
+  token:
+    secret: any_secret_key
+    activity-time: 18000
+    experation-time: 86400
 
 
 #  ldap:
