[Modified] OC-315 #comment changed tooltips and installed reactßforce graph 3d #time 3h

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -36,6 +36,7 @@
     "react-contenteditable": "^3.3.2",
     "react-dom": "16.14.0",
     "react-favicon": "^0.0.18",
+    "react-force-graph-3d": "^1.18.9",
     "react-grid-layout": "^1.2.0",
     "react-grid-system": "^4.4.2",
     "react-i18next": "v10.0.0",
@@ -69,6 +70,7 @@
     "socket.io-client": "^2.0.3",
     "storm-react-diagrams": "^5.2.1",
     "styled-components": "4.0.0",
+    "three": "^0.125.2",
     "uglifyjs-webpack-plugin": "2.1.1",
     "vikas-vis": "^1.0.2",
     "vis": "^4.21.0",
