--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -72,6 +72,7 @@
     "styled-components": "4.0.0",
     "three": "^0.125.2",
     "uglifyjs-webpack-plugin": "2.1.1",
+    "url-loader": "^4.1.1",
     "vikas-vis": "^1.0.2",
     "vis": "^4.21.0",
     "xml-js": "^1.6.11"
