[Modified] OC-320 #comment changed to 2d and implemented a pop up description for nodes #time 8h

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -36,7 +36,7 @@
     "react-contenteditable": "^3.3.2",
     "react-dom": "16.14.0",
     "react-favicon": "^0.0.18",
-    "react-force-graph-3d": "^1.18.9",
+    "react-graph-vis": "^1.0.7",
     "react-grid-layout": "^1.2.0",
     "react-grid-system": "^4.4.2",
     "react-i18next": "v10.0.0",
@@ -72,7 +72,6 @@
     "styled-components": "4.0.0",
     "three": "^0.125.2",
     "uglifyjs-webpack-plugin": "2.1.1",
-    "url-loader": "^4.1.1",
     "vikas-vis": "^1.0.2",
     "vis": "^4.21.0",
     "xml-js": "^1.6.11"
@@ -156,6 +155,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "^3.0.2",
+    "url-loader": "^4.1.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.7.0",
