--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**
 !**/src/test/**
 src/main/resources/templates/**
+repository/
 src/main/resources/application.yml
 src/main/resources/upload-dir
 
