--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -47,6 +47,7 @@
     "react-loadable": "^5.5.0",
     "react-mdl-stepper": "^0.2.3",
     "react-motion": "^0.5.1",
+    "react-panelgroup": "^1.0.12",
     "react-redux": "5.1.1",
     "react-router": "^3.0.2",
     "react-router-dom": "^5.1.2",
