--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -3,6 +3,7 @@
     "test": {
       "presets": ["@babel/preset-env", "@babel/preset-react"],
       "plugins": [
+        "@babel/plugin-proposal-optional-chaining",
         ["@babel/plugin-proposal-decorators", {"legacy": true}],
         "@babel/plugin-proposal-class-properties"
       ]
@@ -27,7 +28,7 @@
     // Stage 1
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-logical-assignment-operators",
-    ["@babel/plugin-proposal-optional-chaining", { "loose": false }],
+    ["@babel/plugin-proposal-optional-chaining"],
     ["@babel/plugin-proposal-pipeline-operator", { "proposal": "minimal" }],
     ["@babel/plugin-proposal-nullish-coalescing-operator", { "loose": false }],
     "@babel/plugin-proposal-do-expressions",
