[Added] OC-326 added widget setting support  #time 1d

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**
 !**/src/test/**
 src/main/resources/templates/**
-repository/
+assistant/
 src/main/resources/application.yml
 src/main/resources/upload-dir
 
