[Fixed] OC-337 fixed bug when updating to a new version. Also fixed bug when getting current opencelium version  #time 8h

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -99,7 +99,7 @@ opencelium:
     experation-time: 86400
   assistant:
     repo:
-      url: bitbucket
+      url: https://bobmustaev@bitbucket.org/becon_gmbh/opencelium
       username: uname
       password: password
 
