--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -90,7 +90,7 @@ kibana:
 
 opencelium:
   reboot:
-    path: path/to/sh/file;
+    path: assistant/restart.sh;
   mail:
     from: OC_Application
   token:
