[Fixed] OC-337 fixed bug where git doesn't load by tag version #time 10m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -90,7 +90,7 @@ kibana:
 
 opencelium:
   reboot:
-    path: assistant/restart.sh;
+    path: src/backend/src/main/resources/bashfile/restart.sh
   mail:
     from: OC_Application
   token:
