[Modified] OC-348 #comment implemented https param settings #time 2h

--- a/src/frontend/settings.json
+++ b/src/frontend/settings.json
@@ -7,5 +7,10 @@
     "NEO4J": 7474
   },
   "PROTOCOL": "",
-  "HOSTNAME": ""
+  "HOSTNAME": "",
+  "HTTPS": {
+    "cert": "path_to_cert",
+    "key": "path_to_key",
+    "ca": "path_to_ca"
+  }
 }
