--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -71,7 +71,7 @@
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "storm-react-diagrams": "^5.2.1",
-    "styled-components": "4.0.0",
+    "styled-components": "^5.3.0",
     "three": "^0.125.2",
     "uglifyjs-webpack-plugin": "2.1.1",
     "vikas-vis": "^1.0.2",
