--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,4 +4,4 @@ pipelines:
   default:
     - step:
         script:
-          - git push --mirror git@github.com:opencelium/opencelium.git dev
+          - git push --mirror git@github.com:opencelium/opencelium.git
