[Modified] OC-390 #comment integrated electron with running servers #time 10h

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -124,6 +124,8 @@
     "cross-env": "^7.0.2",
     "css-loader": "2.1.0",
     "css-modules-require-hook": "^4.0.5",
+    "electron": "^15.1.1",
+    "electron-packager": "^15.4.0",
     "enzyme": "^2.7.1",
     "eslint": "^7.20.0",
     "eslint-plugin-babel": "~5.3.1",
@@ -171,8 +173,8 @@
     "start_dev": "cross-env NODE_ENV=development NODE_SOCKET=false NODE_BSYNC=false node server.js --mode development",
     "start_dev_bsync": "cross-env NODE_ENV=development NODE_SOCKET=true NODE_BSYNC=true node server.js --mode development",
     "start_prod": "cross-env NODE_ENV=production NODE_SOCKET=true node server.js --mode production",
-    "build_dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build_prod": "cross-env NODE_ENV=production webpack --mode production",
+    "build_dev": "cross-env NODE_BUILD=1 NODE_ENV=development webpack --mode development",
+    "build_prod": "cross-env NODE_BUILD=1 NODE_ENV=production webpack --mode production",
     "start_prod_server": "node prod_server.js",
     "start_mock": "node json-server.js",
     "watch:test": "jest --watch --no-watchman",
