[Modified] OC-390 #comment changed pathes #time 2h

--- a/src/frontend/electron/package.json
+++ b/src/frontend/electron/package.json
@@ -6,6 +6,6 @@
   "author": "becon",
   "license": "becon ",
   "dependencies": {
-    "tree-kill": "^1.2.2"
+    "electron-packager": "^15.4.0"
   }
 }
