--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,7 +18,7 @@
     "html-webpack-plugin": "^3.2.0",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
-    "i18next-xhr-backend": "^3.1.2",
+    "i18next-http-backend": "^1.3.1",
     "immutable": "3.8.1",
     "interactjs": "^1.3.4",
     "json-server": "^0.12.2",
