--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "fine-uploader": "^5.14.5",
     "fine-uploader-wrappers": "^1.0.0",
+    "graphiql": "^1.5.17",
+    "graphql": "^16.3.0",
     "html-webpack-plugin": "^3.2.0",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
