--- a/src/frontend/oc_modules/template_converter/package.json
+++ b/src/frontend/oc_modules/template_converter/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
-    "node-sass": "^4.14.1",
+    "node-sass": "~6.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "npm:@hot-loader/react-dom",
