--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,41 +3,12 @@
   "version": "2.2",
   "description": "OpenSource API-Hub",
   "private": true,
-  "main": "src/index.js",
+  "main": "src/index.jsx",
   "license": "becon",
   "author": "becon GmbH",
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/node": "^7.14.9",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-decorators": "^7.16.7",
-    "@babel/plugin-proposal-function-bind": "^7.16.7",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@storybook/addon-actions": "^6.3.10",
-    "@storybook/addon-docs": "^6.3.10",
-    "@storybook/addon-essentials": "^6.3.10",
-    "@storybook/addon-links": "^6.3.10",
-    "@storybook/react": "^6.3.10",
-    "@types/chroma-js": "^2.1.3",
-    "@types/redux-state-sync": "^3.1.2",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.0.1",
-    "crypto-browserify": "^3.12.0",
-    "html-webpack-plugin": "^5.3.2",
-    "redux-responsive": "^4.3.8",
-    "sass-loader": "^12.4.0",
-    "storybook-addons-preview-theme": "^1.0.0",
-    "ts-loader": "^9.2.5",
-    "typescript": "^4.4.2",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
-  },
   "scripts": {
-    "start_dev": "webpack serve",
-    "start_prod": "webpack serve",
+    "start_dev": "node server_dev.js",
+    "start_prod": "node server.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -106,6 +77,35 @@
     "styled-components": "^5.3.1",
     "timeago-react": "^3.0.4",
     "xml-js": "^1.6.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
+    "@babel/plugin-proposal-function-bind": "^7.16.7",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@storybook/addon-actions": "^6.3.10",
+    "@storybook/addon-docs": "^6.3.10",
+    "@storybook/addon-essentials": "^6.3.10",
+    "@storybook/addon-links": "^6.3.10",
+    "@storybook/react": "^6.3.10",
+    "@types/chroma-js": "^2.1.3",
+    "@types/redux-state-sync": "^3.1.2",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^6.0.1",
+    "crypto-browserify": "^3.12.0",
+    "html-webpack-plugin": "^5.3.2",
+    "redux-responsive": "^4.3.8",
+    "sass-loader": "^12.4.0",
+    "storybook-addons-preview-theme": "^1.0.0",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.71.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.0"
   },
   "resolutions": {
     "styled-components": "^5"
