[Modified] OC-449 #comment refactored schedule list #time 15m

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -13,6 +13,7 @@
     "resolveJsonModule": true,
     "paths": {
       "@request/*": ["./src/requests/classes/*"],
+      "@model/*": ["./src/requests/models/*"],
       "@requestInterface/*": ["./src/requests/interfaces/*"],
       "@class/*": ["./src/classes/*"],
       "@collection/*": ["./src/collections/*"],
