--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.jayway.jsonpath:json-path:2.4.0'
 	implementation 'org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r'
+	implementation 'wsdl4j:wsdl4j:1.6.2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
