[Modified] OC-449 #comment improved user, webpack build #time 3h

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -12,6 +12,8 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "paths": {
+      "@style/*": ["./src/styles/css/*"],
+      "@image/*": ["./src/img/*"],
       "@request/*": ["./src/requests/classes/*"],
       "@model/*": ["./src/requests/models/*"],
       "@requestInterface/*": ["./src/requests/interfaces/*"],
