--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -27,7 +27,7 @@
     "axios": "^0.21.3",
     "chroma-js": "^2.1.2",
     "cron-parser": "^4.2.1",
-    "graphiql": "^1.5.20",
+    "graphiql": "^1.8.7",
     "graphql": "^16.3.0",
     "i18next": "^21.3.1",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -37,8 +37,10 @@
     "immutable": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "node-fetch": "^3.2.3",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prop-types": "^15.7.2",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-bootstrap": "^2.1.1",
