--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -29,6 +29,7 @@
     "cron-parser": "^4.2.1",
     "graphiql": "^1.8.7",
     "graphql": "^16.3.0",
+    "graphql-ws": "^5.7.0",
     "i18next": "^21.3.1",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-chained-backend": "^3.0.2",
