--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,7 +14,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.182",
@@ -83,6 +82,7 @@
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "@babel/plugin-proposal-function-bind": "^7.16.7",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@storybook/addon-actions": "^6.3.10",
@@ -92,6 +92,7 @@
     "@storybook/react": "^6.3.10",
     "@types/chroma-js": "^2.1.3",
     "@types/redux-state-sync": "^3.1.2",
+    "@types/webpack-env": "^1.16.4",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^6.0.1",
     "crypto-browserify": "^3.12.0",
