--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.6",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.43",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.11",
     "@types/react-grid-layout": "^1.3.0",
     "@types/react-redux": "^7.1.20",
@@ -45,6 +46,7 @@
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-bootstrap": "^2.1.1",
+    "react-color": "^2.19.3",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
