--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.43",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.11",
+    "@types/react-gravatar": "^2.6.10",
     "@types/react-grid-layout": "^1.3.0",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
@@ -50,6 +51,7 @@
     "react-contenteditable": "^3.3.6",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
+    "react-gravatar": "^2.6.3",
     "react-grid-layout": "^1.3.3",
     "react-grid-system": "^8.0.1",
     "react-i18next": "^11.16.2",
