[Modified] OC-160 #comment updated gitignore #time 10m

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -8,6 +8,7 @@ src/main/resources/templates/**
 assistant/
 src/main/resources/application.yml
 src/main/resources/upload-dir
+src/main/resources/invoker/i-doit.xml
 src/test/
 
 ### STS ###
