[Modified] OC-487 #comment reworked update assistant #time 2d

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -104,6 +104,7 @@ kibana:
   port: 5601
 
 opencelium:
+  version: 3.0.0
   debug_mode: false
   reboot:
     path: src/backend/src/main/resources/bashfile/restart.sh
