--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -4,7 +4,6 @@ spring:
   #    port: 5672
   #    username: guest
   #    password: guest
-
   main:
     banner-mode: "off"
   data:
@@ -15,32 +14,26 @@ spring:
     authentication:
       username: neo4j
       password: secret
-
   jpa:
     properties:
       hibernate:
         id:
           new_generator_mappings: false
-
     hibernate:
       dll-auto: validate
-
   datasource:
     url: jdbc:mariadb://localhost:3306/opencelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Berlin
     username: root
     password: root
     initialization-mode: always
     driver-class-name: org.mariadb.jdbc.Driver
-
   servlet:
     multipart:
       max-file-size: 1000000KB
       max-request-size: 1000000KB
-
   http:
     multipart:
       enabled: false
-
   quartz:
     properties:
       org:
@@ -50,11 +43,11 @@ spring:
           jobStore:
             tablePrefix: QRTZ_
     job-store-type: jdbc
-
   liquibase:
     change-log: classpath:/db/changelog/changelog-master.xml
 
   mail:
+    #    enabled: false
     host: smtp.gmail.com
     port: 587
     username: uname
@@ -71,7 +64,6 @@ spring:
   #        socketFactory:
   #          port: 465
   #          class: javax.net.ssl.SSLSocketFactory
-
 server:
   port: 9090
 #  ssl:
@@ -81,7 +73,6 @@ server:
 #    key-store-password: password
 #    key-password: password
 #    key-alias: tomcat
-
 management:
   health:
     defaults:
@@ -93,19 +84,9 @@ management:
   endpoint:
     health:
       show-details: always
-
-elasticsearch:
-  clustername: open_celium
-  host: localhost
-  port: 9300
-
-kibana:
-  host: localhost
-  port: 5601
-
 opencelium:
   version: 3.0.0
-  debug_mode: false
+  debug_mode: true
   reboot:
     path: src/backend/src/main/resources/bashfile/restart.sh
   mail:
@@ -117,13 +98,4 @@ opencelium:
   assistant:
     update:
       online:
-        url: {insert url where portal service is located}
-
-
-
-#  ldap:
-#    embedded:
-#      base-dn: dc=springframework,dc=org
-#      ldif: classpath:test-server.ldif
-#      port: 8389
-#      url: ldap://localhost:8389/
+        url: { insert url where portal service is located }
