[Added] OC-480 #comment fixed bug where response for endpoint check connection existence was wrang   #time 15m

--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -28,6 +28,10 @@ repositories {
 	mavenCentral()
 }
 
+tasks.named('bootJar') {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
