[Modified] OC-160 #comment moved dev port into settings #time 15m

--- a/src/frontend/settings.json
+++ b/src/frontend/settings.json
@@ -6,6 +6,9 @@
     "KIBANA": 5601,
     "NEO4J": 7474
   },
+  "DEV": {
+    "PORT": 8888
+  },
   "PROTOCOL": "",
   "HOSTNAME": "",
   "HTTPS": {
