--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -25,6 +25,8 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-logger": "^3.0.9",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "@types/styled-components": "^5.1.14",
     "axios": "^0.21.3",
     "chroma-js": "^2.1.2",
@@ -75,6 +77,8 @@
     "rxjs": "^5.0.0-rc.2",
     "secure-ls": "^1.2.6",
     "socket.io-client": "^4.5.4",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "storm-react-diagrams": "^5.2.1",
     "styled-components": "^5.3.1",
     "timeago-react": "^3.0.4",
