--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,8 +8,8 @@
   "author": "becon GmbH",
   "scripts": {
     "build": "webpack --config webpack.build.js",
-    "start_dev": "node server_dev.js",
-    "start_prod": "node server.js",
+    "start_dev": "yarn && node server_dev.js",
+    "start_prod": "yarn && node server.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
