--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -1,86 +1,121 @@
+###########################################################################
+#                                                                         #
+#   Webserver configuration section                                       # 
+#                                                                         #
+#   Find here the default port configuration of the backend server        #
+#   and the ssl configuration.                                            #
+#                                                                         #
+###########################################################################          
+server:
+  port: 9090
+    # ssl:
+    #   enabled: true
+    #   key-store-type: PKCS12
+    #   key-store: src/main/resources/keystore.p12
+    #   key-store-password: root
+    #   key-password: root
+    #   key-alias: tomcat
+
+###########################################################################
+#                                                                         #
+#   Database configuration section of MariaDB and Neo4j                   # 
+#                                                                         #
+###########################################################################
 spring:
-  #  rabbitmq:
-  #    host: localhost
-  #    port: 5672
-  #    username: guest
-  #    password: guest
-  main:
-    banner-mode: "off"
-  data:
-    rest:
-      basePath: /api
-  neo4j:
-    url: bolt://localhost:7687
-    authentication:
-      username: neo4j
-      password: secretsecret
-  jpa:
-    properties:
-      hibernate:
-        id:
-          new_generator_mappings: false
-    hibernate:
-      dll-auto: validate
-    open-in-view: false
   datasource:
     url: jdbc:mariadb://localhost:3306/opencelium?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Berlin
     username: root
     password: root
     initialization-mode: always
     driver-class-name: org.mariadb.jdbc.Driver
-  servlet:
-    multipart:
-      max-file-size: 1000000KB
-      max-request-size: 1000000KB
-  http:
-    multipart:
-      enabled: false
-  quartz:
-    properties:
-      org:
-        quartz:
-          threadPool:
-            threadCount: 5
-          jobStore:
-            tablePrefix: QRTZ_
-    job-store-type: jdbc
-  liquibase:
-    change-log: classpath:/db/changelog/changelog-master.xml
-
-  mail:
-    #    enabled: false
-    host: smtp.gmail.com
-    port: 587
-    username: uname
-    password: password
-    properties:
-      mail:
-        smtp:
-          auth: true
-          connectiontimeout: 5000
-          timeout: 5000
-          writetimeout: 5000
-          starttls:
-            enable: true
-  #        socketFactory:
-  #          port: 465
-  #          class: javax.net.ssl.SSLSocketFactory
-
+  neo4j:
+    url: bolt://localhost:7687
+    authentication:
+      username: neo4j
+      password: secret
+  ###########################################################################
+  #                                                                         #
+  #   Mail configuration section                                            # 
+  #                                                                         #
+  ###########################################################################
+mail:
+  opencelium:
+    from: noreply@opencelium.io
+  #    enabled: false
+  host: imap4s.becon.de
+  port: 25
+  username: oc.io.salesdemo
+  password: omedselas.oi.oc
+  properties:
+    mail:
+      smtp:
+        auth: true
+        connectiontimeout: 5000
+        timeout: 5000
+        writetimeout: 5000
+        starttls:
+          enable: true
+        ssl:
+          trust: imap4s.becon.de
+  ###########################################################################
+  #                                                                         #
+  #   Configuration of third part tools                                     # 
+  #                                                                         #
+  ###########################################################################
+  #  ldap:
+  #    embedded:
+  #      base-dn: dc=springframework,dc=org
+  #      ldif: classpath:test-server.ldif
+  #      port: 8389
+  #      url: ldap://localhost:8389/
+  #  rabbitmq:
+  #    host: localhost
+  #    port: 5672
+  #    username: guest
+  #    password: guest
+###########################################################################
+#                                                                         #
+#   Basic configuration section. Do not change the following              #
+#   configuration.                                                        #
+#                                                                         #
+###########################################################################
+main:
+  banner-mode: "off"
+data:
+  rest:
+    basePath: /api
+jpa:
+  properties:
+    hibernate:
+      id:
+        new_generator_mappings: false
+  hibernate:
+    dll-auto: validate
+  open-in-view: false
+servlet:
+  multipart:
+    max-file-size: 1000000KB
+    max-request-size: 1000000KB
+http:
+  multipart:
+    enabled: false
+quartz:
+  properties:
+    org:
+      quartz:
+        threadPool:
+          threadCount: 5
+        jobStore:
+          tablePrefix: QRTZ_
+  job-store-type: jdbc
+liquibase:
+  change-log: classpath:/db/changelog/changelog-master.xml
 logging:
   level:
     org:
       springframework:
         data:
           neo4j: OFF
-server:
-  port: 9090
-#  ssl:
-#    enabled: true
-#    key-store-type: PKCS12
-#    key-store: classpath:keystore/keystore.p12
-#    key-store-password: password
-#    key-password: password
-#    key-alias: tomcat
 management:
   health:
     defaults:
@@ -97,8 +132,6 @@ opencelium:
   debug_mode: true
   reboot:
     path: src/backend/src/main/resources/bashfile/restart.sh
-  mail:
-    from: OC_Application
   token:
     secret: becon.opencelium
     activity-time: 18000
@@ -107,9 +140,3 @@ opencelium:
     update:
       online:
         url: { insert url where portal service is located }
-#  ldap:
-#    embedded:
-#      base-dn: dc=springframework,dc=org
-#      ldif: classpath:test-server.ldif
-#      port: 8389
-#      url: ldap://localhost:8389/
