[Fixed] OC-481 #comment fixed small bugs related to application_default.yml #time 5m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -32,7 +32,7 @@ spring:
     url: bolt://localhost:7687
     authentication:
       username: neo4j
-      password: secret
+      password: secretsecret
 ###########################################################################
 #                                                                         #
 #   Mail configuration section                                            #
