--- a/src/backend/build.gradle
+++ b/src/backend/build.gradle
@@ -44,12 +44,13 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.5.3'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.2'
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'org.openjdk.nashorn:nashorn-core:15.4'
-	implementation 'com.nimbusds:nimbus-jose-jwt:9.25.6'
-	implementation 'org.eclipse.jgit:org.eclipse.jgit:5.11.0.202103091610-r'
+	implementation 'com.nimbusds:nimbus-jose-jwt:9.30.2'
+	implementation 'org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
 	implementation 'wsdl4j:wsdl4j:1.6.3'
 	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 	runtimeOnly 'mysql:mysql-connector-java'
