[Modified] OC-631 #comment ignore baramundi invoker #time 5m

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -9,6 +9,7 @@ assistant/
 src/main/resources/application.yml
 src/main/resources/upload-dir
 src/main/resources/invoker/i-doit.xml
+src/main/resources/invoker/baramundi.xml
 src/test/
 
 ### STS ###
