--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -152,7 +152,7 @@ management:
       show-details: always
 
 opencelium:
-  version: 3.1.0
+  version: 3.1.2
   debug_mode: true
   reboot:
     path: src/backend/src/main/resources/bashfile/restart.sh
@@ -164,3 +164,7 @@ opencelium:
     update:
       online:
         url: { insert url where portal service is located }
+#  rest_template:
+#      proxy:
+#        host: 127.0.0.1
+#        port: 8082
