[Fixed] OC-603  #comment Added refresh token in application_default.yml #time 1m

--- a/src/backend/src/main/resources/application_default.yml
+++ b/src/backend/src/main/resources/application_default.yml
@@ -177,7 +177,7 @@ opencelium:
       slack:
         webhook:
       teams:
-        grant_type:
+        grant_type: refresh_token
         client_id:
         client_secret:
         refresh_token:
