[Modified] OC-698 #comment preparation for release #time 10m

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -10,6 +10,8 @@ src/main/resources/application.yml
 src/main/resources/upload-dir
 src/main/resources/invoker/i-doit.xml
 src/main/resources/invoker/baramundi.xml
+src/main/resources/invoker/lansweeper.xml
+src/main/resources/invoker/jdisc.xml
 src/test/
 
 ### STS ###
